--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "ToDo-App-Api, Built using Nodejs",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node ./dist/index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon ./dist/index.js -e js,hbs,css,",
-    "compile": "tsc --watch",
+    "test": "jest --watch",
+    "start": "node ./dist/index.js",
+    "dev": "env-cmd -f ./config/dev.env nodemon ./dist/index.js -e js,hbs",
+    "build": "tsc --watch",
     "tsc": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@mailchimp/mailchimp_transactional": "^1.0.46",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.1",
@@ -21,6 +21,7 @@
     "mongodb": "^4.2.0",
     "mongoose": "^6.0.13",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.2",
     "sharp": "^0.29.3",
     "validator": "^13.7.0"
   },
@@ -28,14 +29,18 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.11.12",
+    "@types/nodemailer": "^6.4.4",
     "@types/sharp": "^0.29.5",
     "@types/validator": "^13.7.0",
     "env-cmd": "^10.1.0",
+    "jest": "^27.4.5",
     "nodemon": "^2.0.15",
+    "ts-jest": "^27.1.2",
     "typescript": "^4.5.3"
   }
 }
