--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ToDo-App-Api, Built using Nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch",
+    "test": "env-cmd -f ./config/test.env jest --watch",
     "start": "node ./dist/index.js",
     "dev": "env-cmd -f ./config/dev.env nodemon ./dist/index.js -e js,hbs",
     "build": "tsc --watch",
@@ -36,10 +36,12 @@
     "@types/node": "^16.11.12",
     "@types/nodemailer": "^6.4.4",
     "@types/sharp": "^0.29.5",
+    "@types/supertest": "^2.0.11",
     "@types/validator": "^13.7.0",
     "env-cmd": "^10.1.0",
     "jest": "^27.4.5",
     "nodemon": "^2.0.15",
+    "supertest": "^6.2.1",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.3"
   }
