--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ToDo-App-Api, Built using Nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "env-cmd -f ./config/test.env jest --watch",
+    "test": "env-cmd -f ./config/test.env jest --watch --runInBand",
     "start": "node ./dist/index.js",
     "dev": "env-cmd -f ./config/dev.env nodemon ./dist/index.js -e js,hbs",
     "build": "tsc --watch",
